--- a/hw_9/helper/media_767.scss
+++ b/hw_9/helper/media_767.scss
@@ -99,7 +99,7 @@
             width: 360px;
             gap: 48px;
 
-            form {
+            .get {
                 button {
                     text-transform: capitalize;
                 }
